overflow fix (edit user template)

--- a/django/bober/bober_simple_competition/static/css/stylePrint.css
+++ b/django/bober/bober_simple_competition/static/css/stylePrint.css
@@ -301,3 +301,10 @@ p.bottom_text{
 .questionsets:before{
 	content: "• ";
 }
+
+/*----------Long text that breaks-------------------------------------*/
+.longTextBreak {
+	word-break: break-all;
+}
+
+
